WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/OnlineApplicationVehicleSetup__c.object-meta.xml
<CustomObject>
    <description>Forseva Online Application Project</description>
    <label>Online Application Vehicle Setup</label>
    <nameField>
        <displayFormat>Vehicle Setup-{0}</displayFormat>
        <label>Vehicle Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Application Vehicle Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>