WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Additives__c.field-meta.xml
<CustomField>
    <fullName>Additives__c</fullName>
    <inlineHelpText>Additives include oil, brake fluid, washer fluid, etc.</inlineHelpText>
    <label>Additives</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>