WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>