WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Fuel_Grade__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Grade__c</fullName>
    <inlineHelpText>Grades of fuel that are preferred to be purchased. (Ex: Only diesel can be purchased.) Fleet One will notify you on the activity report if a driver buys a different type of fuel.</inlineHelpText>
    <label>Fuel Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unleaded</fullName>
                <default>true</default>
                <label>Unleaded</label>
            </value>
            <value>
                <fullName>Unleaded - Mid</fullName>
            </value>
            <value>
                <fullName>Unleaded - Prem</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>