WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <inlineHelpText>Maintenance, including oil changes.</inlineHelpText>
    <label>Maint.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>