WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The description will be printed on the card as displayed above.</inlineHelpText>
    <label>Vehicle Description</label>
    <length>22</length>
    <type>Text</type>
</CustomField>