WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Vehicle_Id__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Drivers will be prompted for a valid Vehicle ID and odometer reading when purchasing fuel and maintenance services.</inlineHelpText>
    <label>Vehicle Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>