WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationVehicleSetup__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car/Sedan</fullName>
            </value>
            <value>
                <fullName>Light Truck/Van</fullName>
                <default>true</default>
                <label>Light Truck/Van</label>
            </value>
            <value>
                <fullName>Mid Size/Truck</fullName>
            </value>
            <value>
                <fullName>Large Truck/Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>